# selfdrivingnd

./: README.md  a
p1-lanelines/: P1.html  P1.ipynb  README.md  explanations.txt  history.txt
p2-traffic-signs/: .gitignore  README.md  Traffic_Sign_Classifier_Krishnan.ipynb  Traffic_Sign_Classifier_Krishnan.py  Traffic_Signs_Recognition.ipynb  Traffic_Signs_Recognition.py  data_exploration.ipynb  traffic-sign-classification-with-keras.ipynb
p3-behav-cloning/: README.md  data_exploration.ipynb  drive.py  model.py
term2/lessons/lesson5/: CMakeLists.txt  main_chapter7.cpp
term2/lessons/lesson5/laser-measurement/: KalmanFilter.cpp  KalmanFilter.h  Tracking.cpp  Tracking.h  main.cpp  main.h
term2/projects/unscentedKalmanFilter/: CMakeLists.txt  README.md
term2/projects/unscentedKalmanFilter/data/: obj_pose-laser-radar-synthetic-input.txt
term2/projects/unscentedKalmanFilter/implementation/: main.cpp  out.txt  run.out  run.sh  runo.sh  tools.cpp  tools.h  ukf.cpp  ukf.h
term2/projects/unscentedKalmanFilter/lessons/: Test.cpp
term2/projects/unscentedKalmanFilter/lessons/UKF-Update/: main.cpp  run.out
term2/projects/unscentedKalmanFilter/lessons/augmented-sigma-points/: main.cpp  run.out  ukf.h
term2/projects/unscentedKalmanFilter/lessons/generate-sigma-points-1/: main.cpp  run.out  run.sh  ukf.cpp  ukf.h
term2/projects/unscentedKalmanFilter/lessons/predict-mean-covariance/: main.cpp
term2/projects/unscentedKalmanFilter/lessons/radar-measurement/: main.cpp  ukf.cpp
term2/projects/unscentedKalmanFilter/lessons/sigma-point-prediction/: main.cpp  run.out
(+74 files in other folders)
